<resources>
    <string name="name">Uniwheels</string>
    <string name="slogan">rápido, seguro, eficaz</string>
    <string name="entrance_start">Comencemos</string>
    <string name="entry">Ingresar</string>
    <string name="register">Registrarse</string>

    <string name="enter_data">Ingresa tus datos</string>
    <string name="password">Contraseña</string>
    <string name="button_continue">Continuar</string>
    <string name="update">Actualizar</string>
    <string name="delete">Eliminar</string>

    <string name="additional_data">Datos adicionales</string>

    <string name="enter_name">Ingresa tu nombre</string>
    <string name="enter_apellido">Ingresa tu apellido</string>
    <string name="enter_email">Ingresa tu email</string>
    <string name="enter_password">Ingresa tu contraseña</string>
    <string name="enter_id">Ingresa tu identificación</string>
    <string name="enter_address">Ingresa tu dirección</string>
    <string name="enter_cellphone">Ingresa tu número de celular</string>

    <string name="upload_id_photo">Sube una foto de tu identificación</string>

    <string name="select_vehicle_type">Selecciona tu tipo de vehículo</string>
    <string name="select_rol">Selecciona tu rol</string>
    <string name="select_driver_rol">Conductor</string>
    <string name="select_passenger_rol">Pasajero</string>
    <string name="select_motorcycle">Motocicleta</string>
    <string name="select_car">Automovil</string>

    <string name="upload_image">Subir imagen</string>

    <string name="confirm_password">Confirma tu contraseña</string>

    <string name="app_name">Uniwheels App</string>
    <string name="home_fill_data">Ingresar datos del viaje</string>
    <string name="home_departure_point">Punto de partida</string>
    <string name="home_arrival_point">Punto de llegada</string>
    <string name="home_what_want">¿Qué quieres hacer?</string>
    <string name="home_now">Salir ya</string>
    <string name="home_plan">Planear</string>
    <string name="plane_travel_title">Planear un viaje</string>
    <string name="return_bottom">volver</string>
    <!-- DRIVER HOME -->
    <string name="description_driver_home">Desde este panel podrás gestionar tu actividad en Uniwheels como conductor.</string>
    <string name="plan_travel_driver_home">Planificar viaje</string>
    <string name="plan_travel_description_driver_home">Consigue pasajeros anticipadamente</string>
    <string name="review_request_driver_home">Revisa solicitudes</string>
    <string name="review_request_description_driver_home">Revisa las solicitudes de los pasajeros. Concreta lugares de encuentro</string>

    <!-- ADMIN HOME -->
    <string name="description_admin_home">Desde este panel podrás gestionar tu actividad en Uniwheels como administrador.</string>
    <string name="disable_user_admin_home">Deshabilitar usuario</string>
    <string name="disable_user_description_admin_home">Deshabilita un usuario que haya incumplido el reglamento de la plataforma</string>
    <string name="review_driver_admin_home">Revisa conductores</string>
    <string name="review_driver_description_admin_home">Revisa los datos del conductor y valida si adecuado para la plataforma</string>
    <string name="review_vehicle_admin_home">Revisa vehículos</string>
    <string name="review_vehicle_description_admin_home">Revisa los datos del vehículo para reconocer si se encuentra en buen estado</string>

    <!-- PLANNED TRAVELS -->
    <string name="planned_travels">Viajes planeados</string>
    <string name="title_activity_prueba">PruebaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_driver_home">Mi perfil</string>
    <string name="profile_description_driver_home">Revisa tu información personal</string>


</resources>